--- a/index.html
+++ b/index.html
@@ -832,7 +832,8 @@ window.onclick = function (e) {
   });
 
   </script>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763535815663967"
+     crossorigin="anonymous"></script>
   
   
 </html>
