--- a/index.html
+++ b/index.html
@@ -832,8 +832,18 @@ window.onclick = function (e) {
   });
 
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763535815663967"
-     crossorigin="anonymous"></script>
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17081987417">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17081987417');
+</script>
   
   
 </html>
